@@ -22,6 +22,7 @@ Bug Fixes::
   * Allow showtitle/notitle to be toggled in AsciiDoc table cell if set in parent document (#4018)
   * Ensure mtime of input file honors TZ environment variable on JRuby for Windows (affects value of docdatetime attribute) (#3550)
   * Honor caption attribute on blocks that support captioned title even if corresponding *-caption document attribute is not set (#4023)
+  * Suppress missing attribute warning when applying substitutions to implicit document title to assign to doctitle attribute (#4024)
 
 Improvements::
 
